--- a/skillcom-mobile-client/src/app/front/front.component.html
+++ b/skillcom-mobile-client/src/app/front/front.component.html
@@ -24,6 +24,6 @@
     </form>
   </main>
 </body>
-
+<!-- 
 <a routerLink="/user/create" class="btn btn-primary">Create account</a>
-<a routerLink="/user" class="btn btn-primary">Log in</a>
+<a routerLink="/user" class="btn btn-primary">Log in</a> -->
