--- a/skillcom-mobile-client/src/app/user/index/index.component.html
+++ b/skillcom-mobile-client/src/app/user/index/index.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-success" (click)="logout()"> </button>
+<button class="btn btn-success" routerLink="" (click)="logout()"> </button>
 <br>
 
 <div class="container" *ngIf="userContracts">
