actually fixed bug

--- a/skillcom-mobile-client/src/app/app.component.html
+++ b/skillcom-mobile-client/src/app/app.component.html
@@ -14,7 +14,7 @@
 
 <table>
   <tr>
-    <td><button (click)="login()" routerLink="/user"> SIGN IN  </button></td>
+    <td><button (click)="login()"> SIGN IN  </button></td>
   </tr>
   <div *ngIf="isLoggedIn()"> <h3>You Are Logged In </h3> </div>
   <div *ngIf="!isLoggedIn()"> <h3>You Are Not Logged In </h3> </div>
