--- a/skillcom-mobile-client/src/app/app.component.html
+++ b/skillcom-mobile-client/src/app/app.component.html
@@ -23,7 +23,7 @@
 
 </div> 
 <div *ngIf="isLoggedIn()">
-  <button routerLink="/User"> Go to User Page</button>
+  <button routerLink="/user"> Go to User Page</button>
 <td><button (click)="logout()" *ngIf="isLoggedIn()"> LOGOUT </button> </td>
 </div>
 <router-outlet></router-outlet>
