--- a/skillcom-mobile-client/src/app/checkout/checkout.component.css
+++ b/skillcom-mobile-client/src/app/checkout/checkout.component.css
@@ -1,18 +1,109 @@
-p
-{
-  text-align:center;
-  font-size: 200%;
+.checkout{
+	padding-bottom: 50px;
+	font-family: 'Montserrat', sans-serif;
 }
 
-col
-{
-  width: 250px;
-  height: 900px;
-  margin: auto;
-  position: relative;
+.checkout.dark{
+	background-color: #f6f6f6;
 }
 
-.container {
-  margin: auto;
-  width: 50%;
+.checkout .content{
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+	background-color: white;
+}
+
+.checkout .block-heading{
+    padding-top: 50px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.checkout .block-heading p{
+	text-align: center;
+	max-width: 420px;
+	margin: auto;
+	opacity:0.7;
+}
+
+.checkout.dark .block-heading p{
+	opacity:0.8;
+}
+
+.checkout .block-heading h1,
+.checkout .block-heading h2,
+.checkout .block-heading h3 {
+	margin-bottom:1.2rem;
+	color: #3b99e0;
+}
+
+.checkout form{
+	border-top: 2px solid #5ea4f3;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+	background-color: #ffffff;
+	padding: 0;
+	max-width: 600px;
+	margin: auto;
+}
+
+.checkout .title{
+	font-size: 1em;
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+	margin-bottom: 0.8em;
+	font-weight: 600;
+	padding-bottom: 8px;
+}
+
+.checkout .products{
+	background-color: #f7fbff;
+    padding: 25px;
+}
+
+.checkout .products .item{
+	margin-bottom:1em;
+}
+
+.checkout .products .item-name{
+	font-weight:600;
+	font-size: 0.9em;
+}
+
+.checkout .products .item-description{
+	font-size:0.8em;
+	opacity:0.6;
+}
+
+.checkout .products .item p{
+	margin-bottom:0.2em;
+}
+
+.checkout .products .price{
+	float: right;
+	font-weight: 600;
+	font-size: 0.9em;
+}
+
+.checkout .products .total{
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	margin-top: 10px;
+	padding-top: 19px;
+	font-weight: 600;
+	line-height: 1;
+}
+
+.checkout .button{
+	padding: 25px 25px 15px;
+  background-color: #f7fbff;
+}
+
+.checkout .button label{
+	font-size: 12px;
+	font-weight: 600;
+	margin-bottom: 15px;
+	text-transform: uppercase;
+}
+
+.checkout .button button{
+	margin-top: 0.6em;
+	padding:12px 0;
+	font-weight: 600;
 }
