--- a/skillcom-mobile-client/src/app/app.component.html
+++ b/skillcom-mobile-client/src/app/app.component.html
@@ -3,10 +3,10 @@
     <a href="#" class="navbar-brand">
       <h3 class="d-flex align-items-center">Login</h3>
     </a>
-    <a (click)="login()" *ngIf="!isLoggedIn()"> Sign In</a>
-    <a (click)="logout()" *ngIf="isLoggedIn()"> Logout </a>
+    <button (click)="login()" *ngIf="!isLoggedIn()"> Sign In</button>
+    <button (click)="logout()" *ngIf="isLoggedIn()"> Logout </button>
     <!-- <button (click)="logout()"  class = "btn-secondary"> LOGOUT </button> -->
-    <a href="/user">Go to User Page </a>
+    <button routerLink="/user">Go to User Page </button>
     <!-- <button href="/user"> Go to User Page</button> -->
 
     <!-- <a>
