testing msal profile stuff

--- a/skillcom-mobile-client/src/app/user/index/index.component.html
+++ b/skillcom-mobile-client/src/app/user/index/index.component.html
@@ -1,6 +1,7 @@
 <div class="container" *ngIf="userContracts">
   <br>
   <h5>Welcome, {{getName()}}</h5>
+  <h5> Profile Id - {{profile.id}}</h5>
   <br>
   <h1 style = "text-align: center;float:right">  Monthly Bill- ${{bill | number:'1.0-2'}}</h1>
 
