--- a/skillcom-mobile-client/src/app/app.component.html
+++ b/skillcom-mobile-client/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div style="background-color: #e3f2fd;"class="container-fluid d-flex align-items-center">
   <nav class="navbar navbar-light" >
-    <a (click)="login()" *ngIf="!isLoggedIn()" class="btn btn-primary">Sign In</a>
-    <a (click)="logout()" *ngIf="isLoggedIn()" class="btn btn-primary">Logout</a>
-    <a routerLink="/user" *ngIf="isLoggedIn()" class="btn btn-primary">Go to user page</a>
+    <a (click)="logout()" *ngIf="isLoggedIn()" class="btn btn-primary" style="text-align:center">Logout</a>
   </nav>
 </div>
 <div class="text-black" style="background-color: #e3f2fd">
